syntax = "proto3";
option java_multiple_files = true;
package com.peltarion.tracetogether;
import "google/protobuf/empty.proto";

message AdminUser{
    string user = 1;
    Password password = 2;
}

message NewUserRequest{
    AdminUser creator = 1;
    AdminUser newUser = 2;
}

message CasePasswordRequest{
    Id idForConfirmedCase = 1;
    AdminUser user = 2;
}

message Password{
    string password = 1;
}

message CasePassword{
    string password = 1;
}

message Id {
    int64 id = 1;
}

message PotentialCases {
    Id confirmedId = 1;
    repeated Id potentialCases = 2;
    CasePassword password = 3;
}

message NotificationToken{
    Id registeredId = 1;
    Token token = 2;
}

message Token
{
    string token = 1;
}

service CaseNotifierService {
    rpc requestNewUser(NewUserRequest) returns (google.protobuf.Empty);
    rpc requestCasePassword(CasePasswordRequest) returns (CasePassword);
    rpc register(google.protobuf.Empty) returns (Id);
    
    rpc updateNotificationToken(NotificationToken) returns  (google.protobuf.Empty);
    
    rpc confirmedCase(PotentialCases) returns (google.protobuf.Empty);
}